--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~@angular/material/prebuilt-themes/indigo-pink.css';
-
+@import './assets/styles/circle.css';
 
 @media screen and (min-width: 1024px) {
   body {
