feat(summary): add average conso

--- a/src/app/car-summary/car-summary.component.html
+++ b/src/app/car-summary/car-summary.component.html
@@ -1,7 +1,7 @@
 <div class="main-info">
   <span class="title">Consommation moyenne</span>
   <div>
-    <span class="large">8.54</span><span class="medium"> litres/100Km</span>
+    <span class="large">{{getConsoAverage() | round: 2}}</span><span class="medium"> litres/100Km</span>
   </div>
   <span class="trend warning">+8.5%</span>
 </div>
