feat(add-review): add review to a car

--- a/src/app/car-review/car-review.component.html
+++ b/src/app/car-review/car-review.component.html
@@ -7,6 +7,10 @@
 </div>
 
 <md-list>
+  <md-divider></md-divider>
+  <div class="add-rev" (click)="addReview()">
+    <md-icon>add</md-icon><h3 md-subheader>Ajouter un type de révision</h3>
+  </div>
   <div *ngFor="let category of reviewCategories">
     <md-divider></md-divider>
     <h3 md-subheader>{{category.name}}</h3>
