--- a/src/app/car-review/car-review.component.scss
+++ b/src/app/car-review/car-review.component.scss
@@ -20,6 +20,23 @@
     }
   }
 }
+div.add-rev {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  height: 48px;
+  md-icon {
+    height: 32px;
+    width: 32px;
+    font-size: 2em;
+  }
+  h3 {
+    padding: 0 16px;
+    height: auto;
+  }
+}
 
 .circle-container {
   display: flex;
