--- a/src/styles.scss
+++ b/src/styles.scss
@@ -26,3 +26,9 @@ body {
 .text-capitalize {
   text-transform: capitalize;
 }
+
+md-input-container.no-margin {
+  .mat-input-wrapper {
+    margin: 0;
+  }
+}
