feat(reviews): add review deadline infos

--- a/src/app/car-review/car-review.component.html
+++ b/src/app/car-review/car-review.component.html
@@ -18,7 +18,7 @@
       <div *ngFor="let review of reviewsMap.get(category)" class="item" [mdMenuTriggerFor]="menu">
         <!-- http://www.cssscript.com/demo/pure-css-circular-percentage-bar/ -->
         <span class="circle-info">{{getReviewType(category, review).name}}</span>
-        <div class="c100 p82">
+        <div [class]="'c100 p' + getReviewShortestDeadlinePercent(review) + ' ' + getReviewColor(review)">
           <span class="icon">
             <md-icon md-list-icon>{{category.icon}}</md-icon>
 
@@ -28,7 +28,7 @@
             <div class="fill"></div>
           </div>
         </div>
-        <span class="circle-info">5436Km</span>
+        <span class="circle-info">{{getReviewShortestDeadline(review)}}</span>
         <md-menu #menu="mdMenu">
           <button md-menu-item [routerLink]="['reviewDetails', review.id]">
             <md-icon>dialpad</md-icon>
