--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~@angular/material/prebuilt-themes/indigo-pink.css';
 @import './assets/styles/circle.css';
+@import './assets/styles/fab.css';
 
 @media screen and (min-width: 1024px) {
   body {
